--- a/client/app/home/home.component.scss
+++ b/client/app/home/home.component.scss
@@ -1,6 +1,9 @@
 @import '../../styles/utils';
 
 :host {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
 
     #menu {
         @include centerContent();
