--- a/client/app/list/list.component.scss
+++ b/client/app/list/list.component.scss
@@ -1,10 +1,8 @@
 @import '../../styles/utils';
 
 :host {
-    flex: auto;
     display: flex;
     flex-direction: column;
-
     @include fixedToolbar();
 }
 
