--- a/client/styles/_utils.scss
+++ b/client/styles/_utils.scss
@@ -14,7 +14,6 @@
 }
 
 @mixin mat-icon-size($size: 24px) {
-
     line-height: $size * 1.3;
     height: $size * 1.3;
     width: $size * 1.3;
@@ -30,6 +29,7 @@
 @mixin fixedToolbar() {
 
     .containerWithToolbar {
+        min-height: 0;
         position: relative;
 
         .scrollable:not(perfect-scrollbar) {
